wundergraph_cli/src/print_schema/snapshots/wundergraph_cli__print_schema__tests__round_trip_test__mutation.snap
---
source: wundergraph_cli/src/print_schema/mod.rs
expression: r
---
{
  "data": {
    "CreateUser": {
      "id": 1,
      "name": "Max"
    }
  }
}
